# xCrash

./: .gitmodules  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  build.gradle
gradle/wrapper/: gradle-wrapper.properties
xcrash_lib/src/main/cpp/: CMakeLists.txt
xcrash_lib/src/main/cpp/common/: xcc_b64.c  xcc_b64.h  xcc_errno.h  xcc_fmt.c  xcc_libc_support.c  xcc_libc_support.h  xcc_meminfo.c  xcc_meminfo.h  xcc_signal.c  xcc_signal.h  xcc_spot.h  xcc_unwind.c  xcc_unwind.h  xcc_unwind_clang.c  xcc_unwind_clang.h  xcc_unwind_libcorkscrew.c  xcc_unwind_libcorkscrew.h  xcc_unwind_libunwind.c  xcc_unwind_libunwind.h  xcc_util.c  xcc_util.h  xcc_version.h
xcrash_lib/src/main/cpp/dl/: README.md  xc_dl.c  xc_dl.h  xc_dl_const.h  xc_dl_iterate.c  xc_dl_iterate.h  xc_dl_iterator.c  xc_dl_iterator.h  xc_dl_util.c  xc_dl_util.h  xc_dl_version.h
xcrash_lib/src/main/cpp/xcrash/: xc_common.c  xc_common.h  xc_crash.c  xc_crash.h  xc_dl.c  xc_dl.h  xc_fallback.c  xc_fallback.h  xc_jni.c  xc_jni.h  xc_test.c  xc_test.h  xc_trace.c  xc_trace.h  xc_util.c  xc_util.h
xcrash_lib/src/main/cpp/xcrash_dumper/: xcd_arm_exidx.c  xcd_arm_exidx.h  xcd_core.c  xcd_dwarf.c  xcd_dwarf.h  xcd_elf.c  xcd_elf.h  xcd_elf_interface.c  xcd_elf_interface.h  xcd_frames.c  xcd_frames.h  xcd_log.h  xcd_map.c  xcd_map.h  xcd_maps.c  xcd_maps.h  xcd_memory.c  xcd_memory.h  xcd_memory_buf.c  xcd_memory_buf.h  xcd_memory_file.c  xcd_memory_file.h  xcd_memory_remote.c  xcd_memory_remote.h  xcd_process.c  xcd_process.h  xcd_regs.h  xcd_regs_arm.c  xcd_regs_arm64.c  xcd_regs_x86.c  xcd_regs_x86_64.c  xcd_sys.c  xcd_sys.h  xcd_thread.c  xcd_thread.h  xcd_util.c  xcd_util.h
xcrash_lib/src/main/java/xcrash/: ActivityMonitor.java  AnrHandler.java  DefaultLogger.java  Errno.java  FileManager.java  ICrashCallback.java  ILibLoader.java  ILogger.java  JavaCrashHandler.java  NativeHandler.java  TombstoneManager.java  TombstoneParser.java  Util.java  Version.java  XCrash.java
xcrash_sample/: build.gradle
xcrash_sample/src/main/java/xcrash/sample/: MainActivity.java  MyCustomApplication.java
